console.log dos repositórios sem branch master ou develop

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.0",
+    "colors": "^1.4.0",
     "readline-sync": "^1.4.10",
     "shelljs": "^0.8.4"
   }
